--- a/br2-external/configs/pi-trezor-pi5_defconfig
+++ b/br2-external/configs/pi-trezor-pi5_defconfig
@@ -15,13 +15,13 @@ BR2_SYSTEM_BIN_SH_BASH=y
 
 # Toolchain
 BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_6_6=y
-BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
+BR2_TOOLCHAIN_BUILDROOT_MUSL=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
 
 # Kernel
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_TARBALL=y
-BR2_LINUX_KERNEL_CUSTOM_TARBALL_LOCATION="$(call github,raspberrypi,linux,rpi-6.6.y)/linux-rpi-6.6.y.tar.gz"
+BR2_LINUX_KERNEL_CUSTOM_TARBALL_LOCATION="$(call github,raspberrypi,linux,stable_20250916)/linux-stable_20250916.tar.gz"
 BR2_LINUX_KERNEL_USE_DEFCONFIG=y
 BR2_LINUX_KERNEL_DEFCONFIG="bcm2712"
 BR2_LINUX_KERNEL_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL_PI_TREZOR_PATH)/configs/kernel_touchscreen.fragment"
@@ -52,6 +52,7 @@ BR2_PACKAGE_LIBHIDAPI=y
 # Touchscreen support
 BR2_PACKAGE_TSLIB=y
 BR2_PACKAGE_INPUTATTACH=y
+BR2_PACKAGE_EVTEST=y
 
 # Disable all networking to ensure air-gapped operation
 # BR2_PACKAGE_DHCPCD is not set
@@ -68,12 +69,17 @@ BR2_PACKAGE_INPUTATTACH=y
 # BR2_PACKAGE_CONNMAN is not set
 
 # Security hardening
+BR2_TOOLCHAIN_BUILDROOT_SSP=y
+BR2_SSP_STRONG=y
+BR2_TOOLCHAIN_BUILDROOT_FORTIFY_SOURCE=y
+BR2_TOOLCHAIN_BUILDROOT_RELRO_PARTIAL=y
 BR2_PACKAGE_BUSYBOX_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL_PI_TREZOR_PATH)/configs/busybox.fragment"
 
 # Host tools
 BR2_PACKAGE_HOST_DOSFSTOOLS=y
 BR2_PACKAGE_HOST_GENIMAGE=y
 BR2_PACKAGE_HOST_MTOOLS=y
+BR2_PACKAGE_HOST_ISL=y
 
 # Target packages for Pi-Trezor operation
 BR2_PACKAGE_PYTHON3=y
@@ -93,3 +99,8 @@ BR2_ROOTFS_POST_SCRIPT_ARGS="$(BR2_EXTERNAL_PI_TREZOR_PATH)"
 
 # Overlay for Pi-Trezor binaries and configuration
 BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_PI_TREZOR_PATH)/overlay"
+
+# Download optimization and mirrors
+BR2_MIRRORS="https://mirrors.kernel.org/gnu/ https://ftpmirror.gnu.org/ https://mirror.leaseweb.com/gnu/"
+BR2_CCACHE=y
+BR2_ENABLE_LOCALE_PURGE=y
