--- a/overlay/etc/systemd/system/pi-trezor-splash.service
+++ b/overlay/etc/systemd/system/pi-trezor-splash.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Display Pi-Trezor splash on tty1
+Description=Display PitLab Wallet splash on tty1
 After=systemd-user-sessions.service plymouth-quit-wait.service
 DefaultDependencies=no
 
