--- a/br2-external/configs/pi-trezor-pi3_defconfig
+++ b/br2-external/configs/pi-trezor-pi3_defconfig
@@ -1,4 +1,4 @@
-# Pi-Trezor Raspberry Pi 3 Configuration
+# PitLab Wallet Raspberry Pi 3 Configuration
 # Air-gapped wallet appliance with Trezor Core and trezord-go
 # Target: ARM 32-bit (armhf)
 
@@ -10,7 +10,7 @@ BR2_ARM_FPU_NEON_VFPV4=y
 # System
 BR2_SYSTEM_DHCP=""
 BR2_TARGET_GENERIC_HOSTNAME="pi-trezor"
-BR2_TARGET_GENERIC_ISSUE="Pi-Trezor Air-Gapped Wallet"
+BR2_TARGET_GENERIC_ISSUE="PitLab Wallet Air-Gapped Wallet"
 BR2_TARGET_GENERIC_PASSWD_SHA256=y
 BR2_SYSTEM_BIN_SH_BASH=y
 
