--- a/br2-external/configs/pi-trezor-pi5_defconfig
+++ b/br2-external/configs/pi-trezor-pi5_defconfig
@@ -1,4 +1,4 @@
-# Pi-Trezor Raspberry Pi 5 Configuration (64-bit)
+# PitLab Wallet Raspberry Pi 5 Configuration (64-bit)
 # Air-gapped wallet appliance with Trezor Core and trezord-go
 # Target: ARM64 (aarch64)
 
@@ -9,7 +9,7 @@ BR2_cortex_a76=y
 # System
 BR2_SYSTEM_DHCP=""
 BR2_TARGET_GENERIC_HOSTNAME="pi-trezor"
-BR2_TARGET_GENERIC_ISSUE="Pi-Trezor Air-Gapped Wallet"
+BR2_TARGET_GENERIC_ISSUE="PitLab Wallet Air-Gapped Wallet"
 BR2_TARGET_GENERIC_PASSWD_SHA256=y
 BR2_SYSTEM_BIN_SH_BASH=y
 
