--- a/overlay/etc/systemd/system/touchscreen-calibration-once.service
+++ b/overlay/etc/systemd/system/touchscreen-calibration-once.service
@@ -2,7 +2,7 @@
 Description=Run touchscreen calibration on first boot only
 After=local-fs.target
 Before=trezor-emu.service ts-uinput.service
-ConditionPathExists=!/var/lib/pi-trezor/.calibrated
+ConditionPathExists=!/var/lib/pitlab-wallet/.calibrated
 
 [Service]
 Type=oneshot
