--- a/br2-external/configs/pitlab-wallet-pi4_defconfig
+++ b/br2-external/configs/pitlab-wallet-pi4_defconfig
@@ -8,7 +8,7 @@ BR2_cortex_a72=y
 
 # System
 BR2_SYSTEM_DHCP=""
-BR2_TARGET_GENERIC_HOSTNAME="pi-trezor"
+BR2_TARGET_GENERIC_HOSTNAME="pitlab-wallet"
 BR2_TARGET_GENERIC_ISSUE="PitLab Wallet Air-Gapped Wallet"
 BR2_TARGET_GENERIC_PASSWD_SHA256=y
 BR2_SYSTEM_BIN_SH_BASH=y
@@ -81,11 +81,11 @@ BR2_PACKAGE_HOST_GENIMAGE=y
 BR2_PACKAGE_HOST_MTOOLS=y
 BR2_PACKAGE_HOST_ISL=y
 
-# Target packages for Pi-Trezor operation
+# Target packages for PitLab Wallet operation
 BR2_PACKAGE_PYTHON3=y
 BR2_PACKAGE_PYTHON3_PY_PYC=y
 
-# Pi-Trezor specific packages
+# PitLab Wallet specific packages
 BR2_PACKAGE_TREZORD_GO=y
 BR2_PACKAGE_TREZOR_FIRMWARE=y
 
@@ -97,7 +97,7 @@ BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL_PI_TREZOR_PATH)/board/post_build.sh
 BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL_PI_TREZOR_PATH)/board/post_image.sh"
 BR2_ROOTFS_POST_SCRIPT_ARGS="$(BR2_EXTERNAL_PI_TREZOR_PATH)"
 
-# Overlay for Pi-Trezor binaries and configuration
+# Overlay for PitLab Wallet binaries and configuration
 BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_PI_TREZOR_PATH)/overlay"
 
 # Download optimization and mirrors
