--- a/br2-external/configs/pitlab-wallet-pi5_defconfig
+++ b/br2-external/configs/pitlab-wallet-pi5_defconfig
@@ -24,9 +24,9 @@ BR2_LINUX_KERNEL_CUSTOM_TARBALL=y
 BR2_LINUX_KERNEL_CUSTOM_TARBALL_LOCATION="$(call github,raspberrypi,linux,stable_20250916)/linux-stable_20250916.tar.gz"
 BR2_LINUX_KERNEL_USE_DEFCONFIG=y
 BR2_LINUX_KERNEL_DEFCONFIG="bcm2712"
-BR2_LINUX_KERNEL_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL_PI_TREZOR_PATH)/configs/kernel_touchscreen.fragment"
+BR2_LINUX_KERNEL_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL_PITLAB_WALLET_PATH)/configs/kernel_touchscreen.fragment"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
-BR2_LINUX_KERNEL_INTREE_DTS_NAME="bcm2712-rpi-5-b bcm2712-rpi-cm5"
+BR2_LINUX_KERNEL_INTREE_DTS_NAME="broadcom/bcm2712-rpi-5-b broadcom/bcm2712-rpi-cm5"
 
 # Filesystem
 BR2_TARGET_ROOTFS_EXT2=y
@@ -73,7 +73,7 @@ BR2_TOOLCHAIN_BUILDROOT_SSP=y
 BR2_SSP_STRONG=y
 BR2_TOOLCHAIN_BUILDROOT_FORTIFY_SOURCE=y
 BR2_TOOLCHAIN_BUILDROOT_RELRO_PARTIAL=y
-BR2_PACKAGE_BUSYBOX_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL_PI_TREZOR_PATH)/configs/busybox.fragment"
+BR2_PACKAGE_BUSYBOX_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL_PITLAB_WALLET_PATH)/configs/busybox.fragment"
 
 # Host tools
 BR2_PACKAGE_HOST_DOSFSTOOLS=y
@@ -93,12 +93,12 @@ BR2_PACKAGE_TREZOR_FIRMWARE=y
 BR2_PACKAGE_HOST_GO=y
 
 # Image generation
-BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL_PI_TREZOR_PATH)/board/post_build.sh"
-BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL_PI_TREZOR_PATH)/board/post_image.sh"
-BR2_ROOTFS_POST_SCRIPT_ARGS="$(BR2_EXTERNAL_PI_TREZOR_PATH)"
+BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL_PITLAB_WALLET_PATH)/board/post_build.sh"
+BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL_PITLAB_WALLET_PATH)/board/post_image.sh"
+BR2_ROOTFS_POST_SCRIPT_ARGS="$(BR2_EXTERNAL_PITLAB_WALLET_PATH)"
 
 # Overlay for PitLab Wallet binaries and configuration
-BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_PI_TREZOR_PATH)/overlay"
+BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_PITLAB_WALLET_PATH)/overlay"
 
 # Download optimization and mirrors
 BR2_MIRRORS="https://mirrors.kernel.org/gnu/ https://ftpmirror.gnu.org/ https://mirror.leaseweb.com/gnu/"
