--- a/br2-external/configs/pitlab-wallet-pi4_defconfig
+++ b/br2-external/configs/pitlab-wallet-pi4_defconfig
@@ -85,9 +85,17 @@ BR2_PACKAGE_HOST_ISL=y
 BR2_PACKAGE_PYTHON3=y
 BR2_PACKAGE_PYTHON3_PY_PYC=y
 
+# USB and HID support for Trezor communication
+BR2_PACKAGE_LIBUSB=y
+BR2_PACKAGE_HIDAPI=y
+BR2_PACKAGE_EUDEV=y
+
+# Libraries required by system components
+BR2_PACKAGE_ZLIB=y
+
 # PitLab Wallet specific packages
 BR2_PACKAGE_TREZORD_GO=y
-BR2_PACKAGE_TREZOR_FIRMWARE=y
+# BR2_PACKAGE_TREZOR_FIRMWARE=y  # Temporarily disabled - complex build requirements
 
 # Go support for trezord-go
 BR2_PACKAGE_HOST_GO=y
