--- a/br2-external/configs/pitlab-wallet-pi4_defconfig
+++ b/br2-external/configs/pitlab-wallet-pi4_defconfig
@@ -95,7 +95,7 @@ BR2_PACKAGE_ZLIB=y
 
 # PitLab Wallet specific packages
 BR2_PACKAGE_TREZORD_GO=y
-# BR2_PACKAGE_TREZOR_FIRMWARE=y  # Temporarily disabled - complex build requirements
+BR2_PACKAGE_TREZOR_EMU=y
 
 # Go support for trezord-go
 BR2_PACKAGE_HOST_GO=y
