--- a/overlay/etc/systemd/system/touchscreen-calibration-once.service
+++ b/overlay/etc/systemd/system/touchscreen-calibration-once.service
@@ -10,4 +10,4 @@ ExecStart=/usr/local/bin/touchscreen-calibration-once.sh
 RemainAfterExit=yes
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=default.target
