--- a/br2-external/configs/pitlab-wallet-pi5_defconfig
+++ b/br2-external/configs/pitlab-wallet-pi5_defconfig
@@ -21,7 +21,7 @@ BR2_TOOLCHAIN_BUILDROOT_CXX=y
 # Kernel
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_TARBALL=y
-BR2_LINUX_KERNEL_CUSTOM_TARBALL_LOCATION="$(call github,raspberrypi,linux,stable_20250916)/linux-stable_20250916.tar.gz"
+BR2_LINUX_KERNEL_CUSTOM_TARBALL_LOCATION="$(call github,raspberrypi,linux,stable_20250702)/linux-stable_20250702.tar.gz"
 BR2_LINUX_KERNEL_USE_DEFCONFIG=y
 BR2_LINUX_KERNEL_DEFCONFIG="bcm2712"
 BR2_LINUX_KERNEL_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL_PITLAB_WALLET_PATH)/configs/kernel_touchscreen.fragment"
@@ -39,15 +39,16 @@ BR2_TARGET_RPI_FIRMWARE=y
 BR2_PACKAGE_RPI_FIRMWARE=y
 BR2_PACKAGE_RPI_USERLAND=y
 
-# Init system
-BR2_INIT_SYSTEMD=y
-BR2_PACKAGE_SYSTEMD_NETWORKD=n
-BR2_PACKAGE_SYSTEMD_RESOLVED=n
+# Init system - BusyBox init
+BR2_INIT_BUSYBOX=y
+
+# Device management (eudev provides libudev)
+BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_EUDEV=y
 
 # USB support for Trezor communication
 BR2_PACKAGE_LIBUSB=y
 BR2_PACKAGE_EUDEV=y
-BR2_PACKAGE_LIBHIDAPI=y
+BR2_PACKAGE_HIDAPI=y
 
 # Touchscreen support
 BR2_PACKAGE_TSLIB=y
@@ -85,9 +86,12 @@ BR2_PACKAGE_HOST_ISL=y
 BR2_PACKAGE_PYTHON3=y
 BR2_PACKAGE_PYTHON3_PY_PYC=y
 
+# Libraries required by system components
+BR2_PACKAGE_ZLIB=y
+
 # PitLab Wallet specific packages
 BR2_PACKAGE_TREZORD_GO=y
-BR2_PACKAGE_TREZOR_FIRMWARE=y
+BR2_PACKAGE_TREZOR_EMU=y
 
 # Go support for trezord-go
 BR2_PACKAGE_HOST_GO=y
