--- a/br2-external/board/genimage.cfg
+++ b/br2-external/board/genimage.cfg
@@ -1,44 +1,20 @@
 image boot.vfat {
   vfat {
+    extraargs = "-n boot"
+    file bcm2711-rpi-4-b.dtb {
+      image = "bcm2711-rpi-4-b.dtb"
+    }
+    file bcm2711-rpi-400.dtb {
+      image = "bcm2711-rpi-400.dtb"
+    }
+    file bcm2711-rpi-cm4.dtb {
+      image = "bcm2711-rpi-cm4.dtb"
+    }
+    file bcm2711-rpi-cm4s.dtb {
+      image = "bcm2711-rpi-cm4s.dtb"
+    }
     files = {
-      "bcm2708-rpi-b.dtb",
-      "bcm2708-rpi-b-plus.dtb",
-      "bcm2708-rpi-cm.dtb",
-      "bcm2708-rpi-zero.dtb",
-      "bcm2708-rpi-zero-w.dtb",
-      "bcm2709-rpi-2-b.dtb",
-      "bcm2710-rpi-3-b.dtb",
-      "bcm2710-rpi-3-b-plus.dtb",
-      "bcm2710-rpi-cm3.dtb",
-      "bcm2710-rpi-zero-2.dtb",
-      "bcm2710-rpi-zero-2-w.dtb",
-      "bcm2711-rpi-4-b.dtb",
-      "bcm2711-rpi-400.dtb",
-      "bcm2711-rpi-cm4.dtb",
-      "bcm2711-rpi-cm4s.dtb",
-      "bcm2712-rpi-5-b.dtb",
-      "bcm2712-rpi-cm5.dtb",
-      "rpi-firmware" -> {
-        "bootcode.bin",
-        "fixup.dat",
-        "fixup4.dat",
-        "fixup4cd.dat",
-        "fixup4db.dat",
-        "fixup4x.dat",
-        "fixup_cd.dat",
-        "fixup_db.dat",
-        "fixup_x.dat",
-        "start.elf",
-        "start4.elf",
-        "start4cd.elf", 
-        "start4db.elf",
-        "start4x.elf",
-        "start_cd.elf",
-        "start_db.elf",
-        "start_x.elf"
-      },
-      "overlays",
-      "zImage",
+      "rpi-firmware",
       "Image",
       "config.txt",
       "cmdline.txt"
