--- a/br2-external/board/genimage.cfg
+++ b/br2-external/board/genimage.cfg
@@ -1,22 +1,13 @@
 image boot.vfat {
   vfat {
     extraargs = "-n boot"
-    file bcm2711-rpi-4-b.dtb {
-      image = "bcm2711-rpi-4-b.dtb"
-    }
-    file bcm2711-rpi-400.dtb {
-      image = "bcm2711-rpi-400.dtb"
-    }
-    file bcm2711-rpi-cm4.dtb {
-      image = "bcm2711-rpi-cm4.dtb"
-    }
-    file bcm2711-rpi-cm4s.dtb {
-      image = "bcm2711-rpi-cm4s.dtb"
-    }
     files = {
       "Image",
-      "config.txt",
-      "cmdline.txt"
+      "*.dtb",
+      "*.elf",
+      "*.dat",
+      "firmware",
+      "overlays"
     }
   }
   size = 32M
