--- a/br2-external/configs/pitlab-wallet-pi3_defconfig
+++ b/br2-external/configs/pitlab-wallet-pi3_defconfig
@@ -13,11 +13,17 @@ BR2_TARGET_GENERIC_HOSTNAME="pitlab-wallet"
 BR2_TARGET_GENERIC_ISSUE="PitLab Wallet Air-Gapped Wallet"
 BR2_TARGET_GENERIC_PASSWD_SHA256=y
 BR2_SYSTEM_BIN_SH_BASH=y
+# BR2_TARGET_ENABLE_ROOT_LOGIN is not set
+# BR2_TARGET_GENERIC_GETTY is not set
+BR2_TARGET_GENERIC_REMOUNT_ROOTFS_RO=y
+BR2_ENABLE_LOCALE_WHITELIST="C en_US.UTF-8"
 
 # Toolchain
 BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_6_6=y
 BR2_TOOLCHAIN_BUILDROOT_MUSL=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
+# BR2_PIC_PIE is not set
+BR2_RELRO_PARTIAL=y
 
 # Kernel
 BR2_LINUX_KERNEL=y
@@ -28,6 +34,14 @@ BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL_PITLAB_WALLET_PATH)/board/li
 BR2_LINUX_KERNEL_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL_PITLAB_WALLET_PATH)/configs/kernel_touchscreen.fragment"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="broadcom/bcm2710-rpi-3-b broadcom/bcm2710-rpi-3-b-plus broadcom/bcm2710-rpi-cm3 broadcom/bcm2710-rpi-zero-2 broadcom/bcm2710-rpi-zero-2-w"
+BR2_LINUX_KERNEL_DTB_IS_SELF_BUILT=y
+BR2_LINUX_KERNEL_DTB_KEEP_DIRNAME=y
+BR2_LINUX_KERNEL_INSTALL_TARGET=y
+BR2_LINUX_KERNEL_NEEDS_HOST_OPENSSL=y
+BR2_LINUX_KERNEL_NEEDS_HOST_LIBELF=y
+BR2_LINUX_KERNEL_NEEDS_HOST_PAHOLE=y
+BR2_LINUX_KERNEL_NEEDS_HOST_PYTHON3=y
+BR2_PACKAGE_LINUX_TOOLS_GPIO=y
 
 # Filesystem
 BR2_TARGET_ROOTFS_EXT2=y
@@ -39,6 +53,7 @@ BR2_TARGET_ROOTFS_READ_ONLY=y
 BR2_TARGET_RPI_FIRMWARE=y
 BR2_PACKAGE_RPI_FIRMWARE=y
 BR2_PACKAGE_RPI_USERLAND=y
+BR2_PACKAGE_RASPI_GPIO=y
 
 # Init system - BusyBox init
 BR2_INIT_BUSYBOX=y
@@ -55,15 +70,23 @@ BR2_PACKAGE_HIDAPI=y
 BR2_PACKAGE_TSLIB=y
 BR2_PACKAGE_INPUTATTACH=y
 BR2_PACKAGE_EVTEST=y
+BR2_PACKAGE_SPI_TOOLS=y
 
-# Disable all networking to ensure air-gapped operation
+# Network management (minimal for local use)
+BR2_PACKAGE_DROPBEAR=y
+BR2_PACKAGE_DROPBEAR_DISABLE_REVERSEDNS=y
+BR2_PACKAGE_IPTABLES=y
+BR2_PACKAGE_IPTABLES_NFTABLES=y
+BR2_PACKAGE_IPTABLES_NFTABLES_DEFAULT=y
+BR2_PACKAGE_NTP=y
+BR2_PACKAGE_NTP_NTPDATE=y
+
+# Disable external networking to ensure air-gapped operation
 # BR2_PACKAGE_DHCPCD is not set
 # BR2_PACKAGE_IFUPDOWN_SCRIPTS is not set
 # BR2_PACKAGE_WIRELESS_TOOLS is not set
 # BR2_PACKAGE_WPA_SUPPLICANT is not set
 # BR2_PACKAGE_OPENSSH is not set
-# BR2_PACKAGE_DROPBEAR is not set
-# BR2_PACKAGE_IPTABLES is not set
 # BR2_LINUX_KERNEL_EXT_RTLWIFI is not set
 
 # Disable unnecessary services
@@ -78,14 +101,102 @@ BR2_TOOLCHAIN_BUILDROOT_RELRO_PARTIAL=y
 BR2_PACKAGE_BUSYBOX_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL_PITLAB_WALLET_PATH)/configs/busybox.fragment"
 
 # Host tools
+BR2_PACKAGE_HOST_CMAKE=y
+BR2_PACKAGE_HOST_DOS2UNIX=y
 BR2_PACKAGE_HOST_DOSFSTOOLS=y
+BR2_PACKAGE_HOST_DTC=y
+BR2_PACKAGE_HOST_GO=y
 BR2_PACKAGE_HOST_GENIMAGE=y
-BR2_PACKAGE_HOST_MTOOLS=y
 BR2_PACKAGE_HOST_ISL=y
+BR2_PACKAGE_HOST_KMOD_GZ=y
+BR2_PACKAGE_HOST_KMOD_ZSTD=y
+BR2_PACKAGE_HOST_KMOD_XZ=y
+BR2_PACKAGE_HOST_MESON_TOOLS=y
+BR2_PACKAGE_HOST_MTOOLS=y
+BR2_PACKAGE_HOST_PKGCONF=y
+BR2_PACKAGE_HOST_PYTHON3_XZ=y
+BR2_PACKAGE_HOST_ZIP=y
+BR2_PACKAGE_HOST_ZSTD=y
+
+# Graphics and display support
+BR2_PACKAGE_SDL2=y
+BR2_PACKAGE_SDL2_IMAGE=y
+BR2_PACKAGE_SDL2_TTF=y
 
 # Target packages for PitLab Wallet operation
 BR2_PACKAGE_PYTHON3=y
 BR2_PACKAGE_PYTHON3_PY_PYC=y
+BR2_PACKAGE_PYTHON3_BZIP2=y
+BR2_PACKAGE_PYTHON3_CURSES=y
+BR2_PACKAGE_PYTHON3_DECIMAL=y
+BR2_PACKAGE_PYTHON3_READLINE=y
+BR2_PACKAGE_PYTHON3_SQLITE=y
+BR2_PACKAGE_PYTHON_PIP=y
+BR2_PACKAGE_PYTHON_PROTOBUF=y
+
+# Compression libraries
+BR2_PACKAGE_LIBARCHIVE=y
+BR2_PACKAGE_LIBDEFLATE=y
+BR2_PACKAGE_LZ4=y
+BR2_PACKAGE_LZ4_PROGS=y
+BR2_PACKAGE_LZO=y
+
+# Crypto libraries
+BR2_PACKAGE_CA_CERTIFICATES=y
+BR2_PACKAGE_CRYPTODEV_LINUX=y
+BR2_PACKAGE_LIBGCRYPT=y
+BR2_PACKAGE_LIBSODIUM=y
+BR2_PACKAGE_MBEDTLS=y
+BR2_PACKAGE_LIBOPENSSL_BIN=y
+BR2_PACKAGE_LIBOPENSSL_ENGINES=y
+BR2_PACKAGE_RHASH=y
+
+# Database libraries
+BR2_PACKAGE_LMDB=y
+BR2_PACKAGE_SQLITE_STAT4=y
+BR2_PACKAGE_SQLITE_ENABLE_COLUMN_METADATA=y
+BR2_PACKAGE_SQLITE_ENABLE_FTS3=y
+
+# Configuration and data format libraries
+BR2_PACKAGE_LIBCONFIG=y
+BR2_PACKAGE_JANSSON=y
+BR2_PACKAGE_LIBXML2=y
+BR2_PACKAGE_LIBYAML=y
+BR2_PACKAGE_RAPIDJSON=y
+BR2_PACKAGE_YAML_CPP=y
+
+# Graphics and font libraries
+BR2_PACKAGE_FONTCONFIG=y
+BR2_PACKAGE_HARFBUZZ=y
+BR2_PACKAGE_JPEG=y
+BR2_PACKAGE_JPEG_TURBO_TOOLS=y
+BR2_PACKAGE_LIBFM_EXTRA=y
+BR2_PACKAGE_LIBPNG=y
+
+# Hardware interface libraries
+BR2_PACKAGE_BCM2835=y
+BR2_PACKAGE_MRAA=y
+
+# Logging libraries
+BR2_PACKAGE_SPDLOG=y
+
+# Network libraries (for local use only, no external network)
+BR2_PACKAGE_LIBCURL=y
+BR2_PACKAGE_LIBNET=y
+
+# Security libraries
+BR2_PACKAGE_SAFECLIB=y
+
+# System utilities
+BR2_PACKAGE_BC=y
+BR2_PACKAGE_HAVEGED=y
+BR2_PACKAGE_FILE=y
+BR2_PACKAGE_TMUX=y
+BR2_PACKAGE_XXHASH=y
+BR2_PACKAGE_HTOP=y
+BR2_PACKAGE_PROCS=y
+BR2_PACKAGE_WATCHDOG=y
+BR2_PACKAGE_MKSH=y
 
 # Libraries required by system components
 BR2_PACKAGE_ZLIB=y
@@ -93,9 +204,6 @@ BR2_PACKAGE_ZLIB=y
 # PitLab Wallet specific packages
 BR2_PACKAGE_TREZORD_GO=y
 BR2_PACKAGE_TREZOR_EMU=y
-
-# Go support for trezord-go
-BR2_PACKAGE_HOST_GO=y
 
 # Image generation
 BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL_PITLAB_WALLET_PATH)/board/post_build.sh"
@@ -107,5 +215,6 @@ BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_PITLAB_WALLET_PATH)/../overlay"
 
 # Download optimization and mirrors
 BR2_MIRRORS="https://mirrors.kernel.org/gnu/ https://ftpmirror.gnu.org/ https://mirror.leaseweb.com/gnu/"
+BR2_PRIMARY_SITE="https://sources.buildroot.net"
 BR2_CCACHE=y
 BR2_ENABLE_LOCALE_PURGE=y
