--- a/br2-external/configs/pitlab-wallet-pi5_defconfig
+++ b/br2-external/configs/pitlab-wallet-pi5_defconfig
@@ -142,7 +142,7 @@ BR2_PACKAGE_LZO=y
 
 # Crypto libraries
 BR2_PACKAGE_CA_CERTIFICATES=y
-BR2_PACKAGE_CRYPTODEV_LINUX=y
+# BR2_PACKAGE_CRYPTODEV_LINUX is not set
 BR2_PACKAGE_LIBGCRYPT=y
 BR2_PACKAGE_LIBSODIUM=y
 BR2_PACKAGE_MBEDTLS=y
