--- a/br2-external/board/genimage.cfg
+++ b/br2-external/board/genimage.cfg
@@ -1,13 +1,72 @@
 image boot.vfat {
   vfat {
     extraargs = "-n boot"
+    # Kernel image
     files = {
       "Image",
-      "*.dtb",
-      "*.elf",
-      "*.dat",
       "firmware",
       "overlays"
+    }
+
+    # Raspberry Pi 4 Device Trees (include if present)
+    file bcm2711-rpi-4-b.dtb {
+      image = "bcm2711-rpi-4-b.dtb"
+      optional = "true"
+    }
+    file bcm2711-rpi-400.dtb {
+      image = "bcm2711-rpi-400.dtb"
+      optional = "true"
+    }
+    file bcm2711-rpi-cm4.dtb {
+      image = "bcm2711-rpi-cm4.dtb"
+      optional = "true"
+    }
+    file bcm2711-rpi-cm4s.dtb {
+      image = "bcm2711-rpi-cm4s.dtb"
+      optional = "true"
+    }
+
+    # Firmware blobs (copy if present)
+    file start.elf {
+      image = "start.elf"
+      optional = "true"
+    }
+    file start4.elf {
+      image = "start4.elf"
+      optional = "true"
+    }
+    file start_cd.elf {
+      image = "start_cd.elf"
+      optional = "true"
+    }
+    file start_db.elf {
+      image = "start_db.elf"
+      optional = "true"
+    }
+    file start_x.elf {
+      image = "start_x.elf"
+      optional = "true"
+    }
+
+    file fixup.dat {
+      image = "fixup.dat"
+      optional = "true"
+    }
+    file fixup4.dat {
+      image = "fixup4.dat"
+      optional = "true"
+    }
+    file fixup_cd.dat {
+      image = "fixup_cd.dat"
+      optional = "true"
+    }
+    file fixup_db.dat {
+      image = "fixup_db.dat"
+      optional = "true"
+    }
+    file fixup_x.dat {
+      image = "fixup_x.dat"
+      optional = "true"
     }
   }
   size = 32M
