--- a/br2-external/board/genimage.cfg
+++ b/br2-external/board/genimage.cfg
@@ -1,7 +1,8 @@
 image boot.vfat {
   vfat {
     extraargs = "-n boot"
-    # Kernel image
+    
+    # Kernel Image and directories
     files = {
       "Image",
       "firmware",
