--- a/br2-external/configs/pitlab-wallet-pi5_defconfig
+++ b/br2-external/configs/pitlab-wallet-pi5_defconfig
@@ -35,7 +35,7 @@ BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="broadcom/bcm2712-rpi-5-b broadcom/bcm2712-rpi-cm5"
 BR2_LINUX_KERNEL_DTB_IS_SELF_BUILT=y
 BR2_LINUX_KERNEL_DTB_KEEP_DIRNAME=y
-BR2_LINUX_KERNEL_INSTALL_TARGET=y
+# BR2_LINUX_KERNEL_INSTALL_TARGET is not set
 BR2_LINUX_KERNEL_NEEDS_HOST_OPENSSL=y
 BR2_LINUX_KERNEL_NEEDS_HOST_LIBELF=y
 BR2_LINUX_KERNEL_NEEDS_HOST_PAHOLE=y
