feat: add rpi-fbcp Buildroot package, eliminate lcd-show dependency
- Create br2-external/package/rpi-fbcp/ to build fbcp from source
- Enable BR2_PACKAGE_RPI_FBCP in all Pi defconfigs (3/4/5)
- Remove lcd-show FBCP binary copy logic from post_image.sh
- Update docs: lcd-show no longer needed (logic fully integrated)

This makes the build completely self-contained. FBCP is now built
by Buildroot rather than copied from an external repo. Device tree
overlays use Raspberry Pi firmware, and all display configs are in
the lcd-drivers.sh database.

lcd-show-fork can be safely removed from the workspace.

--- a/br2-external/configs/pitlab-wallet-pi5_defconfig
+++ b/br2-external/configs/pitlab-wallet-pi5_defconfig
@@ -52,6 +52,7 @@ BR2_TARGET_ROOTFS_READ_ONLY=y
 BR2_TARGET_RPI_FIRMWARE=y
 BR2_PACKAGE_RPI_FIRMWARE=y
 BR2_PACKAGE_RPI_USERLAND=y
+BR2_PACKAGE_RPI_FBCP=y
 BR2_PACKAGE_RASPI_GPIO=y
 
 # Init system - BusyBox init
