--- a/br2-external/configs/pitlab-wallet-pi3_defconfig
+++ b/br2-external/configs/pitlab-wallet-pi3_defconfig
@@ -31,7 +31,7 @@ BR2_LINUX_KERNEL_CUSTOM_TARBALL=y
 BR2_LINUX_KERNEL_CUSTOM_TARBALL_LOCATION="$(call github,raspberrypi,linux,stable_20250702)/linux-stable_20250702.tar.gz"
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
 BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL_PITLAB_WALLET_PATH)/board/linux-pi3-pi4.config"
-BR2_LINUX_KERNEL_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL_PITLAB_WALLET_PATH)/configs/kernel_touchscreen.fragment"
+BR2_LINUX_KERNEL_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL_PITLAB_WALLET_PATH)/configs/kernel_touchscreen.fragment $(BR2_EXTERNAL_PITLAB_WALLET_PATH)/configs/kernel_rp1_off.fragment"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="broadcom/bcm2710-rpi-3-b broadcom/bcm2710-rpi-3-b-plus broadcom/bcm2710-rpi-cm3 broadcom/bcm2710-rpi-zero-2 broadcom/bcm2710-rpi-zero-2-w"
 BR2_LINUX_KERNEL_DTB_IS_SELF_BUILT=y
