Fix Pi 3 kernel build: disable RP1 and DesignWare I2C modules
- Updated base config linux-pi3-pi4.config to disable all RP1 drivers
  (RP1 is Pi 5-specific silicon; not present on Pi 3/4)
- Disabled: FIRMWARE_RP1, RP1_PIO, WS2812_PIO_RP1, MFD_RP1, PINCTRL_RP1,
  COMMON_CLK_RP1, COMMON_CLK_RP1_SDIO, MBOX_RP1, PWM_PIO_RP1, PWM_RP1,
  DRM_RP1_{DSI,DPI,VEC}, VIDEO_RP1_CFE, SENSORS_RP1_ADC, SND_RP1_AUDIO_OUT
- Disabled I2C_DESIGNWARE_{CORE,PLATFORM} (not used on BCM2710/Pi 3)
- Refined kernel_rp1_off.fragment to use 'is not set' syntax
- Resolves modpost errors: undefined __aeabi_{u}ldivmod symbols
- Pi 3 kernel now builds successfully without RP1 module link failures

--- a/br2-external/board/linux-pi3-pi4.config
+++ b/br2-external/board/linux-pi3-pi4.config
@@ -2032,7 +2032,7 @@ CONFIG_CONNECTOR=m
 CONFIG_DMIID=y
 # CONFIG_DMI_SYSFS is not set
 CONFIG_RASPBERRYPI_FIRMWARE=y
-CONFIG_FIRMWARE_RP1=m
+# CONFIG_FIRMWARE_RP1 is not set
 # CONFIG_FW_CFG_SYSFS is not set
 # CONFIG_SYSFB_SIMPLEFB is not set
 # CONFIG_ARM_FFA_TRANSPORT is not set
@@ -2254,8 +2254,8 @@ CONFIG_NVME_HWMON=y
 # Misc devices
 #
 CONFIG_BCM2835_SMI=m
-CONFIG_RP1_PIO=m
-CONFIG_WS2812_PIO_RP1=m
+# CONFIG_RP1_PIO is not set
+# CONFIG_WS2812_PIO_RP1 is not set
 # CONFIG_AD525X_DPOT is not set
 # CONFIG_DUMMY_IRQ is not set
 # CONFIG_PHANTOM is not set
@@ -3807,9 +3807,9 @@ CONFIG_I2C_BCM2835=m
 CONFIG_I2C_BRCMSTB=m
 # CONFIG_I2C_CADENCE is not set
 # CONFIG_I2C_CBUS_GPIO is not set
-CONFIG_I2C_DESIGNWARE_CORE=m
+# CONFIG_I2C_DESIGNWARE_CORE is not set
 # CONFIG_I2C_DESIGNWARE_SLAVE is not set
-CONFIG_I2C_DESIGNWARE_PLATFORM=m
+# CONFIG_I2C_DESIGNWARE_PLATFORM is not set
 # CONFIG_I2C_DESIGNWARE_PCI is not set
 # CONFIG_I2C_EMEV2 is not set
 CONFIG_I2C_GPIO=m
@@ -3948,7 +3948,7 @@ CONFIG_PINCTRL_MCP23S08=m
 # CONFIG_PINCTRL_SINGLE is not set
 # CONFIG_PINCTRL_STMFX is not set
 # CONFIG_PINCTRL_SX150X is not set
-CONFIG_PINCTRL_RP1=y
+# CONFIG_PINCTRL_RP1 is not set
 CONFIG_PINCTRL_BCM2712=y
 CONFIG_PINCTRL_BCM2835=y
 
@@ -4336,7 +4336,7 @@ CONFIG_SENSORS_TMP102=m
 # CONFIG_SENSORS_W83L786NG is not set
 # CONFIG_SENSORS_W83627HF is not set
 # CONFIG_SENSORS_W83627EHF is not set
-CONFIG_SENSORS_RP1_ADC=m
+# CONFIG_SENSORS_RP1_ADC is not set
 CONFIG_THERMAL=y
 # CONFIG_THERMAL_NETLINK is not set
 # CONFIG_THERMAL_STATISTICS is not set
@@ -4574,7 +4574,7 @@ CONFIG_MFD_WM5102=y
 # CONFIG_MFD_CS40L50_SPI is not set
 # CONFIG_RAVE_SP_CORE is not set
 # CONFIG_MFD_INTEL_M10_BMC_SPI is not set
-CONFIG_MFD_RP1=y
+# CONFIG_MFD_RP1 is not set
 # CONFIG_MFD_RSMU_I2C is not set
 # CONFIG_MFD_RSMU_SPI is not set
 # end of Multifunction device drivers
@@ -5071,7 +5071,7 @@ CONFIG_VIDEO_BCM2835_UNICAM=m
 #
 CONFIG_VIDEO_RPI_HEVC_DEC=m
 CONFIG_VIDEO_RASPBERRYPI_PISP_BE=m
-CONFIG_VIDEO_RP1_CFE=m
+# CONFIG_VIDEO_RP1_CFE is not set
 
 #
 # Renesas media platform drivers
@@ -5830,9 +5830,9 @@ CONFIG_DRM_TI_SN65DSI83=m
 CONFIG_DRM_V3D=m
 CONFIG_DRM_VC4=m
 CONFIG_DRM_VC4_HDMI_CEC=y
-CONFIG_DRM_RP1_DSI=m
-CONFIG_DRM_RP1_DPI=m
-CONFIG_DRM_RP1_VEC=m
+# CONFIG_DRM_RP1_DSI is not set
+# CONFIG_DRM_RP1_DPI is not set
+# CONFIG_DRM_RP1_VEC is not set
 # CONFIG_DRM_ETNAVIV is not set
 # CONFIG_DRM_HISI_HIBMC is not set
 # CONFIG_DRM_HISI_KIRIN is not set
@@ -6195,7 +6195,7 @@ CONFIG_SND_DESIGNWARE_PCM=y
 # CONFIG_SND_I2S_HI6210_I2S is not set
 # CONFIG_SND_SOC_IMG is not set
 # CONFIG_SND_SOC_MTK_BTCVSD is not set
-CONFIG_SND_RP1_AUDIO_OUT=m
+# CONFIG_SND_RP1_AUDIO_OUT is not set
 # CONFIG_SND_SOC_SOF_TOPLEVEL is not set
 
 #
@@ -7418,8 +7418,8 @@ CONFIG_COMMON_CLK=y
 
 # CONFIG_LMK04832 is not set
 # CONFIG_COMMON_CLK_MAX9485 is not set
-CONFIG_COMMON_CLK_RP1=y
-CONFIG_COMMON_CLK_RP1_SDIO=y
+# CONFIG_COMMON_CLK_RP1 is not set
+# CONFIG_COMMON_CLK_RP1_SDIO is not set
 CONFIG_COMMON_CLK_HIFIBERRY_DACPLUSHD=m
 CONFIG_COMMON_CLK_HIFIBERRY_DACPRO=m
 # CONFIG_COMMON_CLK_SI5341 is not set
@@ -7470,7 +7470,7 @@ CONFIG_MAILBOX=y
 # CONFIG_ALTERA_MBOX is not set
 CONFIG_BCM2835_MBOX=y
 # CONFIG_MAILBOX_TEST is not set
-CONFIG_MBOX_RP1=m
+# CONFIG_MBOX_RP1 is not set
 CONFIG_IOMMU_IOVA=y
 CONFIG_IOMMU_API=y
 CONFIG_IOMMU_SUPPORT=y
@@ -8199,9 +8199,9 @@ CONFIG_PWM_BRCMSTB=y
 # CONFIG_PWM_FSL_FTM is not set
 CONFIG_PWM_GPIO=m
 CONFIG_PWM_PCA9685=m
-CONFIG_PWM_PIO_RP1=m
+# CONFIG_PWM_PIO_RP1 is not set
 CONFIG_PWM_RASPBERRYPI_POE=m
-CONFIG_PWM_RP1=y
+# CONFIG_PWM_RP1 is not set
 # CONFIG_PWM_STMPE is not set
 # CONFIG_PWM_XILINX is not set
 
