Complete security audit and Pi3 64-bit fixes
- Fixed Pi3 configuration: 32-bit ARM → 64-bit ARM64 (aarch64)
- Enhanced security: Removed SSH (Dropbear) and NTP for true air-gap
- Fixed package integration: Added trezor-emu to Config.in
- Added air-gap validation script for build compliance
- Updated trezor-emu build to fix Python dependency issues

All configs now properly enforce air-gapped operation with 64-bit ARM
for Pi3B/Pi3B+ hardware compatibility.

--- a/br2-external/configs/pitlab-wallet-pi5_defconfig
+++ b/br2-external/configs/pitlab-wallet-pi5_defconfig
@@ -73,13 +73,13 @@ BR2_PACKAGE_EVTEST=y
 BR2_PACKAGE_SPI_TOOLS=y
 
 # Network management (minimal for local use)
-BR2_PACKAGE_DROPBEAR=y
-BR2_PACKAGE_DROPBEAR_DISABLE_REVERSEDNS=y
+# BR2_PACKAGE_DROPBEAR is not set
+# BR2_PACKAGE_DROPBEAR_DISABLE_REVERSEDNS is not set
 BR2_PACKAGE_IPTABLES=y
 BR2_PACKAGE_IPTABLES_NFTABLES=y
 BR2_PACKAGE_IPTABLES_NFTABLES_DEFAULT=y
-BR2_PACKAGE_NTP=y
-BR2_PACKAGE_NTP_NTPDATE=y
+# BR2_PACKAGE_NTP is not set
+# BR2_PACKAGE_NTP_NTPDATE is not set
 
 # Disable external networking to ensure air-gapped operation
 # BR2_PACKAGE_DHCPCD is not set
