--- a/br2-external/Config.in
+++ b/br2-external/Config.in
@@ -1,2 +1,3 @@
 source "$BR2_EXTERNAL_PITLAB_WALLET_PATH/package/rpi-fbcp/Config.in"
 source "$BR2_EXTERNAL_PITLAB_WALLET_PATH/package/trezord-go/Config.in"
+source "$BR2_EXTERNAL_PITLAB_WALLET_PATH/package/trezor-emu/Config.in"
