--- a/br2-external/configs/pitlab-wallet-pi3_defconfig
+++ b/br2-external/configs/pitlab-wallet-pi3_defconfig
@@ -1,11 +1,11 @@
-# PitLab Wallet Raspberry Pi 3 Configuration
+# PitLab Wallet Raspberry Pi 3 Configuration (64-bit)
 # Air-gapped wallet appliance with Trezor Core and trezord-go
-# Target: ARM 32-bit (armhf)
+# Target: ARM64 (aarch64)
 
-# Base Raspberry Pi 3 configuration
-BR2_arm=y
+# Base Raspberry Pi 3 64-bit configuration
+BR2_aarch64=y
 BR2_cortex_a53=y
-BR2_ARM_FPU_NEON_VFPV4=y
+BR2_ARM_FPU_VFPV4=y
 
 # System
 BR2_SYSTEM_DHCP=""
@@ -74,13 +74,13 @@ BR2_PACKAGE_EVTEST=y
 BR2_PACKAGE_SPI_TOOLS=y
 
 # Network management (minimal for local use)
-BR2_PACKAGE_DROPBEAR=y
-BR2_PACKAGE_DROPBEAR_DISABLE_REVERSEDNS=y
+# BR2_PACKAGE_DROPBEAR is not set
+# BR2_PACKAGE_DROPBEAR_DISABLE_REVERSEDNS is not set
 BR2_PACKAGE_IPTABLES=y
 BR2_PACKAGE_IPTABLES_NFTABLES=y
 BR2_PACKAGE_IPTABLES_NFTABLES_DEFAULT=y
-BR2_PACKAGE_NTP=y
-BR2_PACKAGE_NTP_NTPDATE=y
+# BR2_PACKAGE_NTP is not set
+# BR2_PACKAGE_NTP_NTPDATE is not set
 
 # Disable external networking to ensure air-gapped operation
 # BR2_PACKAGE_DHCPCD is not set
