--- a/br2-external/board/genimage.cfg
+++ b/br2-external/board/genimage.cfg
@@ -27,11 +27,20 @@ image boot.vfat {
       optional = "true"
     }
 
-    # Firmware blobs (copy if present)
+    # Firmware blobs (required for boot)
+    file bootcode.bin {
+      image = "bootcode.bin"
+      optional = "false"
+    }
+    file fixup.dat {
+      image = "fixup.dat"
+      optional = "false"
+    }
     file start.elf {
       image = "start.elf"
-      optional = "true"
+      optional = "false"
     }
+    # Additional firmware variants (optional)
     file start4.elf {
       image = "start4.elf"
       optional = "true"
