--- a/br2-external/configs/pitlab-wallet-pi4_defconfig
+++ b/br2-external/configs/pitlab-wallet-pi4_defconfig
@@ -48,6 +48,9 @@ BR2_TARGET_ROOTFS_EXT2_4=y
 BR2_TARGET_ROOTFS_EXT2_SIZE="512M"
 BR2_TARGET_ROOTFS_READ_ONLY=y
 
+# Raspberry Pi firmware
+BR2_PACKAGE_RPI_FIRMWARE=y
+
 # Bootloader
 BR2_TARGET_RPI_FIRMWARE=y
 BR2_PACKAGE_RPI_FIRMWARE=y
