cleanup: consolidate kernel configs and remove redundant files
- Remove redundant post-build.sh and fragments
- Consolidate common kernel configs into board/common/kernel.fragment
- Update defconfig files to use consolidated kernel fragment
- Clean up configuration structure
- Remove minimal_defconfig_changes.fragment and kernel_rp1_off.fragment
- Update Pi3/4/5 defconfigs to use new fragment structure

--- a/br2-external/Config.in
+++ b/br2-external/Config.in
@@ -1,3 +1,19 @@
-source "$BR2_EXTERNAL_PITLAB_WALLET_PATH/package/rpi-fbcp/Config.in"
-source "$BR2_EXTERNAL_PITLAB_WALLET_PATH/package/trezord-go/Config.in"
-source "$BR2_EXTERNAL_PITLAB_WALLET_PATH/package/trezor-emu/Config.in"
+# PitLab Wallet external package configuration
+
+menuconfig BR2_PACKAGE_PITLAB_WALLET
+    bool "PitLab Wallet Packages"
+    help
+      Select PitLab Wallet specific packages
+
+if BR2_PACKAGE_PITLAB_WALLET
+
+menu "Display Support"
+    source "$BR2_EXTERNAL_PITLAB_WALLET_PATH/package/rpi-fbcp/Config.in"
+endmenu
+
+menu "Hardware Security"
+    source "$BR2_EXTERNAL_PITLAB_WALLET_PATH/package/trezord-go/Config.in"
+    source "$BR2_EXTERNAL_PITLAB_WALLET_PATH/package/trezor-emu/Config.in"
+endmenu
+
+endif # BR2_PACKAGE_PITLAB_WALLET
