--- a/br2-external/board/genimage.cfg
+++ b/br2-external/board/genimage.cfg
@@ -1,12 +1,34 @@
 image boot.vfat {
   vfat {
-    extraargs = "-n boot"
+    extraargs = "-n boot -S 512 -F 32"
     
     # Kernel Image and directories
     files = {
       "Image",
       "firmware",
       "overlays"
+    }
+
+    # Raspberry Pi 3 Device Trees
+    file bcm2710-rpi-3-b.dtb {
+      image = "bcm2710-rpi-3-b.dtb"
+      optional = "false"
+    }
+    file bcm2710-rpi-3-b-plus.dtb {
+      image = "bcm2710-rpi-3-b-plus.dtb"
+      optional = "false"
+    }
+    file bcm2710-rpi-cm3.dtb {
+      image = "bcm2710-rpi-cm3.dtb"
+      optional = "true"
+    }
+    file bcm2710-rpi-zero-2.dtb {
+      image = "bcm2710-rpi-zero-2.dtb"
+      optional = "true"
+    }
+    file bcm2710-rpi-zero-2-w.dtb {
+      image = "bcm2710-rpi-zero-2-w.dtb"
+      optional = "true"
     }
 
     # Raspberry Pi 4 Device Trees (include if present)
@@ -24,6 +46,12 @@ image boot.vfat {
     }
     file bcm2711-rpi-cm4s.dtb {
       image = "bcm2711-rpi-cm4s.dtb"
+      optional = "true"
+    }
+
+    # Raspberry Pi 5 Device Trees
+    file bcm2712-rpi-5-b.dtb {
+      image = "bcm2712-rpi-5-b.dtb"
       optional = "true"
     }
 
@@ -45,6 +73,10 @@ image boot.vfat {
       image = "start4.elf"
       optional = "true"
     }
+    file start5.elf {
+      image = "start5.elf"
+      optional = "true"
+    }
     file start_cd.elf {
       image = "start_cd.elf"
       optional = "true"
@@ -55,11 +87,6 @@ image boot.vfat {
     }
     file start_x.elf {
       image = "start_x.elf"
-      optional = "true"
-    }
-
-    file fixup.dat {
-      image = "fixup.dat"
       optional = "true"
     }
     file fixup4.dat {
@@ -78,8 +105,12 @@ image boot.vfat {
       image = "fixup_x.dat"
       optional = "true"
     }
+    file fixup5.dat {
+      image = "fixup5.dat"
+      optional = "true"
+    }
   }
-  size = 32M
+  size = 1024M
 }
 
 image sdcard.img {
