--- a/br2-external/configs/pitlab-wallet-pi3_defconfig
+++ b/br2-external/configs/pitlab-wallet-pi3_defconfig
@@ -1,22 +1,20 @@
 # PitLab Wallet Raspberry Pi 3 Configuration (64-bit)
-# Air-gapped wallet appliance with Trezor Core and trezord-go
-# Target: ARM64 (aarch64)
+# Inherits from pitlab-wallet-base_defconfig
 
-# Base Raspberry Pi 3 64-bit configuration
-BR2_aarch64=y
+include $(BR2_EXTERNAL_PITLAB_WALLET_PATH)/configs/pitlab-wallet-base_defconfig
+
+# Pi3-specific CPU settings
 BR2_cortex_a53=y
-BR2_ARM_FPU_VFPV4=y
 
-# System
-BR2_SYSTEM_DHCP=""
-BR2_TARGET_GENERIC_HOSTNAME="pitlab-wallet"
-BR2_TARGET_GENERIC_ISSUE="PitLab Wallet Air-Gapped Wallet"
-BR2_TARGET_GENERIC_PASSWD_SHA256=y
-BR2_SYSTEM_BIN_SH_BASH=y
-# BR2_TARGET_ENABLE_ROOT_LOGIN is not set
-# BR2_TARGET_GENERIC_GETTY is not set
-BR2_TARGET_GENERIC_REMOUNT_ROOTFS_RO=y
-BR2_ENABLE_LOCALE_WHITELIST="C en_US.UTF-8"
+# Pi3-specific kernel configuration
+BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL_PITLAB_WALLET_PATH)/board/linux-pi3-pi4.config"
+
+# Pi3-specific DMA settings
+BR2_KERNEL_HEADERS_AS_KERNEL=y
+
+# Pi3 Display/GPU settings
+BR2_PACKAGE_RPI_FIRMWARE=y
+BR2_PACKAGE_RPI_FIRMWARE_VARIANT_PI3=y
 
 # Toolchain
 BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_6_6=y
@@ -31,7 +29,7 @@ BR2_LINUX_KERNEL_CUSTOM_TARBALL=y
 BR2_LINUX_KERNEL_CUSTOM_TARBALL_LOCATION="$(call github,raspberrypi,linux,stable_20250702)/linux-stable_20250702.tar.gz"
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
 BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL_PITLAB_WALLET_PATH)/board/linux-pi3-pi4.config"
-BR2_LINUX_KERNEL_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL_PITLAB_WALLET_PATH)/configs/kernel_touchscreen.fragment $(BR2_EXTERNAL_PITLAB_WALLET_PATH)/configs/kernel_rp1_off.fragment"
+BR2_LINUX_KERNEL_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL_PITLAB_WALLET_PATH)/configs/kernel_touchscreen.fragment $(BR2_EXTERNAL_PITLAB_WALLET_PATH)/board/common/kernel.fragment"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="broadcom/bcm2710-rpi-3-b broadcom/bcm2710-rpi-3-b-plus broadcom/bcm2710-rpi-cm3 broadcom/bcm2710-rpi-zero-2 broadcom/bcm2710-rpi-zero-2-w"
 BR2_LINUX_KERNEL_DTB_IS_SELF_BUILT=y
@@ -51,10 +49,11 @@ BR2_TARGET_ROOTFS_READ_ONLY=y
 
 # Raspberry Pi firmware
 BR2_PACKAGE_RPI_FIRMWARE=y
+BR2_PACKAGE_RPI_FIRMWARE_BOOTCODE_BIN=y
+BR2_PACKAGE_RPI_FIRMWARE_VARIANT_PI=y
 
 # Bootloader
 BR2_TARGET_RPI_FIRMWARE=y
-BR2_PACKAGE_RPI_FIRMWARE=y
 BR2_PACKAGE_RPI_USERLAND=y
 BR2_PACKAGE_RPI_FBCP=y
 BR2_PACKAGE_RASPI_GPIO=y
